RESOLVED FIXED117440
Crash in StorageAreaMap::applyChange when clearing local storage in another web process
https://bugs.webkit.org/show_bug.cgi?id=117440
Summary Crash in StorageAreaMap::applyChange when clearing local storage in another w...
Anders Carlsson
Reported 2013-06-10 16:35:44 PDT
Crash in StorageAreaMap::applyChange when clearing local storage in another web process
Attachments
Patch (2.10 KB, patch)
2013-06-10 16:37 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2013-06-10 16:37:58 PDT
Tim Horton
Comment 2 2013-06-10 16:40:10 PDT
Comment on attachment 204223 [details] Patch Sad that there's no test.
Anders Carlsson
Comment 3 2013-06-10 16:43:41 PDT
Note You need to log in before you can comment on or make changes to this bug.