Crash in StorageAreaMap::applyChange when clearing local storage in another web process https://bugs.webkit.org/show_bug.cgi?id=117440 <rdar://problem/13961548>

Reviewed by Tim Horton.

Add an early return so we won't try to look up a null key in the m_pendingValueChanges map.
Also, fix an assertion - it's fine for m_storageMap to be null in applyChange.

* WebProcess/Storage/StorageAreaMap.cpp:
(WebKit::StorageAreaMap::applyChange):

Canonical link: https://commits.webkit.org/135631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151409 268f45cc-cd09-0410-ab3c-d52691b4dbfc